--- a/frontend/src/Styles/auth.scss
+++ b/frontend/src/Styles/auth.scss
@@ -2,15 +2,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh; 
+  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column; 
   .form {
+    margin-top: 7rem;
     color: #151717;
     display: flex;
     flex-direction: column;
     gap: 10px;
     background-color: #ffffff;
-    padding: 50px;
-    max-width: 500px; 
+    padding: 30px;
+    max-width: 400px; 
     width: 100%;
     border-radius: 20px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -126,9 +130,11 @@
 }
 
 
-
 .regis{
   color: #151717;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column; 
   .form {
     margin-top: 8rem;
     display: flex;
@@ -136,6 +142,7 @@
     gap: 10px;
     max-width: 350px;
     background-color: #fff;
+    box-sizing: border-box;
     padding: 20px;
     border-radius: 20px;
     position: relative;
