Reset password setted in authSlice and authService and also Reset passwordconfirm page is setted through the mailtrap link and everything is working fine

--- a/frontend/src/Styles/ActivatePage.scss
+++ b/frontend/src/Styles/ActivatePage.scss
@@ -23,7 +23,7 @@
   font-size: 24px; /* Adjust the size as needed */
 }
 
-.button-submit {
+.button {
   background-color: #3498db;
   color: #fff;
   padding: 10px 60px;
