registeration validations almost every condition checked and the common toast eroor 404 solved, user login when register problem solved with avoiding the navigation, user first name take from the userInfo

--- a/frontend/src/Styles/ActivatePage.scss
+++ b/frontend/src/Styles/ActivatePage.scss
@@ -23,7 +23,7 @@
   font-size: 24px; /* Adjust the size as needed */
 }
 
-.button {
+.button-activate {
   background-color: #3498db;
   color: #fff;
   padding: 10px 60px;
@@ -34,7 +34,7 @@
 }
 
 /* Hover state */
-.button-submit:hover {
+.button-activate:hover {
   background-color: #0c8551;
 }
 
