--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,7 +14,7 @@
   --greyText: hsl(0, 0%, 75%);
   --bgColor: hsl(0, 0%, 100%);
   --shadowColor: hsla(0, 0%, 0%, 0.314);
-  --gradient: linear-gradient(to bottom, hsl(16, 100%, 71%,), hsl(8, 100%, 70%));
+  --gradient: linear-gradient(to bottom, hsl(16, 100%, 71%),hsl(8, 100%, 70%));
   --boxShadow: rgba(0,0,0,0.1) 0px 10px 15px -3px,
   rgba(0,0,0,0.05) 0px 4px 6px -2px;
   /* Font ang Typography */
