--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -1,79 +1,56 @@
-:root {
-  --primaryColor: hsl(233, 52%, 19%);
-  --secColor: hsl(233, 16%, 44%);
-  --hoverColor: hsl(8, 100%, 70%);
-  --blackColor: #707070;
-  --greyText: hsl(0, 0%, 75%);
-  --bgColor: hsl(0, 0%, 100%);
-  --shadowColor: hsla(0, 0%, 0%, 0.314);
-  --boxShadow: rgba(0,0,0,0.1) 0px 10px 15px -3px,
-  rgba(0,0,0,0.05) 0px 4px 6px -2px;
-  /* Font ang Typography */
-  --biggestFontSize: 2.4rem;
-  --h1FontSize: 2.2rem;
-  --h2FontSize: 1.25rem;
-  --h3FontSize: 1rem;
-  --normalFontSize: 0.938rem;
-  --smallFontSize: 0.813rem;
-  --smallestFontSize: 0.75rem;
+.hero__subtitle img {
+  width: 2.3rem;
+  height: 2.3rem;
 }
 
-.Home {
-  padding-top: 4rem;
-  flex-direction: column;
-  gap: 2rem;
-  height: auto;
-  width: 100vw;
-  position: relative;
-  overflow: hidden;
-}
-.Home .textDiv .redText {
-  color: var(--hoverColor);
+.hero__content h1 {
+  font-size: 3.2rem;
   font-weight: 600;
-  font-size: 1rem;
-  text-transform: uppercase;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  color: var(--heading-color);
 }
-.Home .textDiv h2 {
-  position: relative;
+
+.hero__content h1 .highlight {
+  color: var(--secondary-color);
+}
+
+.hero__content p {
+  font-size: 1.1rem;
+  color: var(--text-color);
+  line-height: 2rem;
+}
+
+.hero__img-box img, .hero__img-box video {
+  width: 100%;
+  height: 350px;
+  border-radius: 20px;
+  border: 1px solid var(--secondary-color);
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.hero__content {
+  padding-top: 2rem;
+}
+
+.hero__img-box {
+  padding-top: 1rem;
+}
+
+.services__subtitle {
   font-size: 2.2rem;
-  font-weight: 900;
-  color: var(--primaryColor);
+  font-weight: 500;
+  color: #ee6e6e;
+  font-family: var(--subtitle-font-name);
 }
-.Home .textDiv p {
-  color: var(--secColor);
-  font-size: var(--h3FontSize);
-  line-height: 25px;
+
+.services__title {
+  font-size: 2.5rem;
+  font-weight: 500;
 }
-.Home .textDiv .buttons {
-  gap: 1rem;
-}
-.Home .textDiv .buttons .btn {
-  padding: 1rem;
-  font-size: 15px;
-}
-.Home .textDiv .buttons .playBtn {
-  gap: 0.5rem;
-  cursor: pointer;
-}
-.Home .textDiv .buttons .playBtn .icon {
-  justify-content: center;
-  height: 40px;
-  width: 40px;
-  padding: 8px;
-  border-radius: 50%;
-  background: var(--hoverColor);
-  color: whitesmoke;
-}
-.Home .imgDiv {
-  width: 90%;
-  margin: auto;
-}
-.Home .imgDiv img {
-  scale: 1;
-}
-.Home .subMainImage {
-  position: absolute;
-  width: 7rem;
-  top: 5rem;
-  right: 50%;
+
+.featured__tour-title {
+  font-size: 2.3rem;
+  font-weight: 500;
 }/*# sourceMappingURL=Home.css.map */
