--- a/frontend/src/Styles/Home.scss
+++ b/frontend/src/Styles/Home.scss
@@ -1,95 +1,56 @@
-:root{
-  --primaryColor : hsl(233, 52%, 19%);
-  --secColor : hsl(233, 16%, 44%);
-  --hoverColor : hsl(8, 100%, 70%);
-  --blackColor : #707070;
-  --greyText : hsl(0, 0%, 75%);
-  --bgColor : hsl(0, 0%, 100%);
-  --shadowColor : hsla(0, 0%, 0%, 0.314);
-  // --gradient : linear-gradient(to bottom, hsl(16, 100%, 71%,), hsl(8, 100%, 70%));
-  --boxShadow: rgba(0,0,0,0.1) 0px 10px 15px -3px,
-  rgba(0,0,0,0.05) 0px 4px 6px -2px;
 
-  
-/* Font ang Typography */
-
-  --biggestFontSize: 2.4rem;
-  --h1FontSize: 2.2rem;
-  --h2FontSize: 1.25rem;
-  --h3FontSize: 1rem;
-  --normalFontSize: 0.938rem;
-  --smallFontSize: 0.813rem;
-  --smallestFontSize: 0.75rem;
-
+.hero__subtitle img{
+  width: 2.3rem;
+  height: 2.3rem;
 }
 
-.Home{
-  padding-top: 4rem;
-  flex-direction: column;
-  gap: 2rem;
-  height: auto;
-  width: 100vw;
-  position: relative;
-  overflow: hidden;
+.hero__content h1{
+  font-size: 3.2rem;
+  font-weight: 600;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  color: var(--heading-color);
+}
 
-  .textDiv {
-    .redText{
-      color: var(--hoverColor);
-      font-weight: 600;
-      font-size: 1rem;
-      text-transform: uppercase;
-    }
+.hero__content h1 .highlight{
+  color: var(--secondary-color);
+}
 
-    h2{
-      position: relative;
-      font-size: 2.2rem;
-      font-weight: 900;
-      color: var(--primaryColor);
-    }
+.hero__content p {
+  font-size: 1.1rem;
+  color: var(--text-color);
+  line-height: 2rem;
+}
 
-    p{
-      color: var(--secColor);
-      font-size: var(--h3FontSize);
-      line-height: 25px;
-    }
+.hero__img-box img, .hero__img-box video{
+  width: 100%;
+  height: 350px;
+  border-radius: 20px;
+  border: 1px solid var(--secondary-color);
+  object-fit: cover;
+}
 
-    .buttons{
-      gap: 1rem;
+.hero__content{
+  padding-top: 2rem;
+}
 
-      .btn{
-        padding: 1rem;
-        font-size: 15px;
-      }
+.hero__img-box{
+  padding-top: 1rem;
+}
 
-      .playBtn{
-        gap: 0.5rem;
-        cursor: pointer;
+.services__subtitle{
+  font-size: 2.2rem;
+  font-weight: 500;
+  color: #ee6e6e;
+  font-family: var(--subtitle-font-name);
+}
 
-        .icon{
-          justify-content: center;
-          height: 40px;
-          width: 40px;
-          padding: 8px;
-          border-radius: 50%;
-          background: var(--hoverColor);
-          color: whitesmoke;
-        }
-      }
-    }
-  }
+.services__title{
+  font-size: 2.5rem;
+  font-weight: 500;
+}
 
-  .imgDiv{
-    width: 90%;
-    margin: auto;
-    img{
-      scale: 1;
-    }
-  }
-
-  .subMainImage{
-    position: absolute;
-    width: 7rem;
-    top: 5rem;
-    right: 50%;
-  }
+.featured__tour-title{
+  font-size: 2.3rem;
+  font-weight: 500;
 }
