--- a/frontend/src/Styles/tour-details.css
+++ b/frontend/src/Styles/tour-details.css
@@ -116,6 +116,7 @@
   font-size: 12px;
   padding: 0 0 0 0;
   list-style: circle;
+  margin-left: 15px;
 }
 
 .main-rig-bx{
@@ -158,6 +159,7 @@
   font-size: 12px;
   padding: 0 0 0 0;
   color: #696969;
+  margin-left: 15px;
   list-style: circle;
 }
 
