--- a/frontend/src/shared/tour-card.css
+++ b/frontend/src/shared/tour-card.css
@@ -1,12 +1,17 @@
 .tour__img img{
   width: 100%;
+  height: 200px;
+  object-fit: cover;
   border-radius: 5px 5px 0 0;
 }
 
 .card{
+  height: 400px;
   border: none !important;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
   transition: .5s;
+  display: flex;
+  flex-direction: column;
 }
 
 .card:hover{
@@ -52,7 +57,9 @@
 .tour__title{
   margin-top: 1rem;
   font-size: 1.1rem;
-  cursor: pointer;  
+  cursor: pointer;
+  height: 50px;
+  overflow: hidden;  
 }
 
 .tour__title a{
@@ -68,6 +75,9 @@
 .card__bottom{
   border-top: 1px solid #e3e3e3;
   padding-top: .5rem;
+  height: 80px;
+  display: flex;
+  /* flex-direction: column; */
 }
 
 .card__bottom h6 {
