--- a/frontend/src/pages/Admin/Section/products/view/add-packageform.css
+++ b/frontend/src/pages/Admin/Section/products/view/add-packageform.css
@@ -4,12 +4,14 @@
   padding: 20px;
   background-color: #f4f4f4;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .heading {
   font-size: 24px;
   margin-bottom: 20px;
+  text-align: center;
+  font-family: monospace;
 }
 
 .form {
