wallet model, serializer, view and url implemented and shows the wallet amount on the booking confirm page

--- a/frontend/src/components/user/BookingConfirm/booking-confirm.css
+++ b/frontend/src/components/user/BookingConfirm/booking-confirm.css
@@ -371,6 +371,12 @@ ul:not(.browser-default) {
   outline: 0;
 }
 
+.wallet-checkbox {
+  display: inline-flex;
+  align-items: center;
+}
+
+
 
 
 
