booking detail page + booking cancel with wallet + base Url + admin wrapper + axios instance

--- a/frontend/src/pages/Admin/Section/products/view/add-packageform.css
+++ b/frontend/src/pages/Admin/Section/products/view/add-packageform.css
@@ -58,3 +58,9 @@
   width: 100%;
   box-sizing: border-box;
 }
+
+.checkbox-wrapper {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 10px; 
+}
