--- a/frontend/src/components/user/chat/chat-page.css
+++ b/frontend/src/components/user/chat/chat-page.css
@@ -1,5 +1,11 @@
-.chat-container{
+.chat-container {
+  width: 700px; 
+  height: 400px;  
+  border: 1px solid #ccc;  
+  overflow: auto; 
+  margin: 20px auto; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+  border-radius: 10px; 
   display: flex;
-  height: 100vh;
-  background-color: #ffffff;
+  background-color: #f9f9f9; 
 }
